Closed Bug 1730319 Opened 3 years ago Closed 3 years ago

Startup Crash in [@ convertTable]

Categories

(Thunderbird :: General, defect)

Thunderbird 93
Unspecified
Windows 10
defect

Tracking

(thunderbird_esr91 unaffected, thunderbird93+ verified)

RESOLVED FIXED
94 Branch
Tracking Status
thunderbird_esr91 --- unaffected
thunderbird93 + verified

People

(Reporter: wsmwk, Assigned: benc)

References

(Regression)

Details

(Keywords: crash, regression, topcrash-thunderbird)

Crash Data

Attachments

(1 file)

#1 crash for Thunderbird 93.0b1. No crashes in prior beta nor nightly.

Crash report: https://crash-stats.mozilla.org/report/index/833e2f6a-c667-4e9c-bfdc-65fd80210911 - which has a couple interesting dictionaries
Srpski_latinica@dictionaries.addons.mozilla.org
sr-RS@dictionaries.addons.mozilla.org

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll convertTable comm/mailnews/base/src/nsMsgFolderCache.cpp:495
1 xul.dll nsMsgFolderCache::Init comm/mailnews/base/src/nsMsgFolderCache.cpp:186
2 xul.dll nsMsgAccountManager::GetFolderCache comm/mailnews/base/src/nsMsgAccountManager.cpp:831
3 xul.dll nsMsgDBFolder::GetFolderCacheElemFromFile comm/mailnews/base/src/nsMsgDBFolder.cpp:599
4 xul.dll nsMsgDBFolder::GetStringProperty comm/mailnews/base/src/nsMsgDBFolder.cpp:1981
5 xul.dll nsMsgLocalMailFolder::SetPrettyName comm/mailnews/local/src/nsLocalMailFolder.cpp:817
6 xul.dll nsMsgIncomingServer::SetPrettyName comm/mailnews/base/src/nsMsgIncomingServer.cpp:564
7 xul.dll XPTC__InvokebyIndex 
8  @0xcd081fd4f7 
9 xul.dll _tailMerge_d3dcompiler_47.dll 
Flags: needinfo?(masayuki)

Also startup crash. Mostly 7 seconds or less. Not enough time to even open compose.

Summary: Crash in [@ convertTable] → Startup Crash in [@ convertTable]
Assignee: nobody → benc
Status: NEW → ASSIGNED

No way to tell from the crash report, but it looks like the crash happens with a corrupt panacea.dat file.
No idea of what the root cause there might be, but I can replicate it with an empty mork db (ie just enough to fool the code into opening it, but without any of the expected data in it). The patch makes the panacea.dat -> foldercache.json migration more tolerant of missing tables, and adds a unit test for it.

Flags: needinfo?(benc)
Target Milestone: --- → 94 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/16504e0198c3
Don't crash when migrating a bad folderCache (panacea.dat). r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

can't tell from nightly statistics, needs uplift to beta to assess effectivness

Flags: needinfo?(benc)

(In reply to Wayne Mery (:wsmwk) from comment #6)

can't tell from nightly statistics, needs uplift to beta to assess effectivness

Yes, if my original patch to convert the folderCache from mork to JSON (Bug 418551) made it into beta, this fix definitely should be uplifted to accompany it. It's a low risk change, just a missing-null-check oneliner really (the bulk of the patch is unit test code).
I'm not 100% sure what bugzilla flag magic needs to happen to do this, so best if someone else does it :-)

Flags: needinfo?(benc)

visit the details link of the patch https://bugzilla.mozilla.org/attachment.cgi?id=9240829&action=edit, set approval-comm-beta to ? and fill out the form

Flags: needinfo?(benc)

Comment on attachment 9240829 [details]
Bug 1730319 - Don't crash when migrating a bad folderCache (panacea.dat). r=mkmelin

[Approval Request Comment]
Regression caused by (bug #):
Bug 418551
User impact if declined:
Crashes when trying to migrate screwed-up panacea.dat files
Testing completed (on c-c, etc.):
currently in c-c, and patch adds a unit test to cover the issue
Risk to taking this patch (and alternatives if risky):
low risk (adds a one-liner null check, a not-null assertion and a unit test)

Flags: needinfo?(benc)
Attachment #9240829 - Flags: approval-comm-beta?

Comment on attachment 9240829 [details]
Bug 1730319 - Don't crash when migrating a bad folderCache (panacea.dat). r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9240829 - Flags: approval-comm-beta? → approval-comm-beta+

Thanks Ben. There are no crash reports for 9-20 build 93.0b3, so => v.fixed

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: