Bug 1730319 - Don't crash when migrating a bad folderCache (panacea.dat). r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D125352

--HG--
extra : amend_source : 163331a249ff0a6a528c1669004e0cb03089413b